--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<meta name="description" content="Todas las tapas del diario comercio y justicia desde 2010 hasta la fecha">
+	<meta name="description" content="Todas las tapas del diario Comercio y Justicia desde 2008 hasta la fecha">
 	
 	<!-- Mobile viewport optimized: h5bp.com/viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
