--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <ul id="social-bar" class="cf">
 	<li class="left-corner"><i></i></li>
 	<!-- <li><a href="http://www.facebook.com"  title="Become a fan" ><img src="img/social/Facebook.png"  alt="Facebook" /></a></li>-->
-	<li><a target="_blank" href="https://twitter.com/cyjpuntoinfo" title="Comercio y justicia e twitter" >
+	<li><a target="_blank" href="https://twitter.com/cyjpuntoinfo" title="Comercio y Justicia en Twitter" >
                                 <img src="img/social/Twitter.png"  alt="comercio y justicia en twitter" />
                             </a>
                         </li>
