--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </p><p>
     Apostando al ideal periodístico de la independencia y la utópica pero desafiante búsqueda permanente de la objetividad, este matutino ocupó un espacio señero en el mercado de publicaciones jurídicas y en la elaboración y difusión de indicadores económicos.
     </p><p>
-    Puede visitar el sitio del diario <a target="_blank" href="http://comercioyjusticia.com.ar">aqui</a>
+    Puede visitar el sitio del diario <a target="_blank" href="http://comercioyjusticia.info">aqui</a>
 </p>
 						
 					</div>
