--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="sb-holder cf">
 <ul id="social-bar" class="cf">
 	<li class="left-corner"><i></i></li>
-	<!-- <li><a href="http://www.facebook.com"  title="Become a fan" ><img src="img/social/Facebook.png"  alt="Facebook" /></a></li>-->
+	<li><a href="https://www.facebook.com/comercioyjusticia.info"  title="Seguí a Comercio y Justicia" ><img src="img/social/Facebook.png"  alt="Comercio y Justicia en Facebook" /></a></li>-->
 	<li><a target="_blank" href="https://twitter.com/cyjpuntoinfo" title="Comercio y Justicia en Twitter" >
                                 <img src="img/social/Twitter.png"  alt="comercio y justicia en twitter" />
                             </a>
